# TCPCom

./: CMakeLists.txt  README.md  main.cpp  readFileExample.txt
Examples/: chatExamle.txt
File/: File.cpp  File.hpp
TCP/: TCPServer.cpp  TCPServer.hpp  TCPSocket.cpp  TCPSocket.hpp
